deployment2-ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "ollama run llama3"]
        volumeMounts:
        - name: ca-cert
          mountPath: "/usr/local/share/ca-certificates/ollama-ca.crt"
          subPath: ollama-ca.crt
      volumes:
      - name: ca-cert
        configMap:
          name: ollama-ca
